--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.rotate-logo:hover {
+  transform: rotateY(360deg);
+  transition: transform 1s;
+}
